# hpp-gik-tutorial

./: CMakeLists.txt  README  README.md  robotpkg.conf.append
doc/: CMakeLists.txt  Doxyfile.extra.in  footer.html  header.html
include/hpp/gik/tutorial/: corba-client.hh  robot-builder.hh
share/: CMakeLists.txt  config.romeo.in  romeo-hpp.kxml
share/vrml/: chest_romeo.wrl  larm_romeo.wrl  lfoot_romeo.wrl  lforearm_romeo.wrl  lhand_romeo.wrl  lthigh_romeo.wrl  ltibia_romeo.wrl  ltoes_romeo.wrl  neck_romeo.wrl  rarm_romeo.wrl  rfoot_romeo.wrl  rforearm_romeo.wrl  rhand_romeo.wrl  rthigh_romeo.wrl  rtibia_romeo.wrl  rtoes_romeo.wrl  trunk_yaw.wrl
src/: CMakeLists.txt  application.cc  application.hh  corba-client.cc  hpp-gik-tutorial.cc  robot-builder.cc  romeo-joints.hh  romeo.cc
